# bus-route-optimizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  docker-compose.prod.yml  docker-compose.yml  index.html  logs.bat  logs.sh  migrate.bat  migrate.sh  mock_routes.xlsx  pyproject.toml  release-tutti-desktop.bat  reset.bat  reset.sh  start-tutti-desktop-app.bat  start-tutti-desktop.bat  start-tutti.bat  start.bat  start.sh  start_tutti.bat  stop.bat  stop.sh
.agents/skills/: README.md
.claude/: ralph-loop.local.md  settings.local.json
.github/workflows/: desktop-release.yml  test.yml
.planning/: FEEDBACK_BACKEND.md  OPTIMIZATION_PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TIMELINE_DND_ARCHITECTURE_ANALYSIS.md  gtake-integration-safe.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/gsd/: INTEGRATION_EXAMPLE.md  MASTER_PLAN_GTAK.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .coveragerc  .dockerignore  .env.example  API_EDITOR_USAGE.md  Dockerfile  EDITOR_ENDPOINTS_SUMMARY.md  celery_app.py  config.py  create_mock_data.py  debug_output.txt  debug_parser.py  dependencies.txt  main.py  models.py  optimizer.py  optimizer_lns.py  optimizer_multi.py  optimizer_v2.py  optimizer_v4.py  optimizer_v5.py  optimizer_v6.py  parser.py  pdf_service.py  progress_listener.py  pyproject.toml  pytest.ini  reproduce_issue.py  requirements-dev.txt  requirements.txt  router_service.py  simple_merge_test.py  tasks.py  test_all_imports.py  test_import.py  test_optimizer.py  test_parser_script.py  test_performance.py  test_table_api.py  test_v6.py  type_defs.py  (+5 more)
backend/api/: README.md  __init__.py  fleet.py  routes_editor.py  validation.py  workspaces.py
backend/benchmarks/: __init__.py  metrics.py  run_benchmarks.py  run_real_excels.py  suite.py
backend/benchmarks/results/: real_excels_smoke.json
backend/config/: __init__.py  osrm.py
backend/data/: fleet_profiles.json
backend/db/: README.md  __init__.py  crud.py  database.py  models.py  schemas.py
backend/db/migrations/: alembic.ini  env.py
backend/db/migrations/versions/: 2025_02_10_1944-001_initial_migration.py  2026_02_16_2200-002_manual_schedules.py
backend/models/: __init__.py  validation.py  validation_result.py
backend/scripts/: init_db.py
backend/services/: IMPLEMENTATION_SUMMARY.md  SUGGESTION_ENGINE.md  fleet_assignment.py  fleet_registry.py  hybrid_quantum_optimizer.py  job_runtime_store.py  manual_schedule_validator.py  ml_arc_ranker.py  ml_assignment_service.py  optimization_pipeline_service.py  osrm_service.py  quantum_backends.py  qubo_encoder.py  suggestion_engine.py  workspace_options.py
backend/tests/: BUFFER_VALIDATION_REPORT.md  MONTE_CARLO_TEST_REPORT.md  README.md  __init__.py  conftest.py  test_api_async.py  test_benchmarks.py  test_celery.py  test_desktop_update_mode.py  test_e2e_async.py  test_fleet_registry_storage.py  test_manual_validation.py  test_ml_assignment_api_ab.py  test_ml_assignment_service.py  test_models.py  test_monte_carlo.py  test_monte_carlo_validation.py  test_optimizer.py  test_optimizer_advanced.py  test_parser.py  test_pipeline_load_balance.py  test_pipeline_validation_features.py  test_router_service.py  test_suggestion_engine.py  test_timeline_validation_ws.py  test_validation.py  test_validation_api.py  test_websocket.py  test_websocket_monte_carlo.py  test_workspace_crud.py
backend/tests/fixtures/: generate_sample_excel.py  sample_routes.json
backend/validation/: __init__.py  monte_carlo.py
backend/websocket/: __init__.py  schedule_validation_ws.py  timeline_validation_ws.py
docs/: README.md
docs/reports/: ANALISIS_TUTTI_INFORME_COMPLETO.md  DESARROLLO_TUTTI_SEGUIMIENTO.md  FASE1_VALIDACION_FINAL.md  FASE2_VALIDACION_FINAL.md  FASE3_VALIDACION_FINAL.md  FEEDBACK_BACKEND.md  FEEDBACK_DEVOPS.md  FEEDBACK_FRONTEND.md  FEEDBACK_TESTING.md  INTEGRACION_DB_RESUMEN.md  TYPE_HINTS_REPORT.md
docs/setup/: DOCKER.md  (+4 more)
frontend/: .dockerignore  .env.example  Dockerfile  METRICS_IMPLEMENTATION.md  index.html  package-lock.json  package.json  playwright.config.js  playwright.smoke.config.js  tailwind.config.js  test.css  test.html  tsconfig.json
landing/: index.html  main.js  styles.css
(+191 files in other folders)
