[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutti-bus-optimizer"
version = "1.0.0"
description = "Tutti Bus Route Optimizer - Backend"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "optimizer: marks tests as optimizer tests",
]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "test_*.py",
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "db/*",
    "scripts/*",
    "*/migrations/*",
    "main.py",
    "optimizer_v2.py",
    "optimizer_v4.py",
    "optimizer_v5.py",
    "pdf_service.py",
    "type_defs.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
